--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,15 @@
-spring.datasource.url=jdbc:h2:mem:stock_data
-spring.datasource.driverClassName=org.h2.Driver
+spring.h2.console.enabled=true
+spring.datasource.url=jdbc:h2:mem:stock_data;DB_CLOSE_DELAY=-1;MODE=MySQL;NON_KEYWORDS=USER
 spring.datasource.username=sa
 spring.datasource.password=sa
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-spring.h2.console.enabled=true
-spring.h2.console.settings.web-allow-others=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
+spring.datasource.driverClassName=org.h2.Driver
+spring.jpa.generate-ddl=true
+spring.jpa.hibernate.ddl-auto=update
+spring.session.jdbc.initialize-schema=always
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.defer-datasource-initialization=true
+spring.sql.init.continue-on-error=true
+spring.jpa.properties.hibernate.use_sql_comments=true
+spring.sql.init.mode=always
