--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,15 +1,15 @@
+#   Hibernate Settings
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.show_sql=false
+#   H2 Settings
 spring.h2.console.enabled=true
-spring.datasource.url=jdbc:h2:mem:stock_data;DB_CLOSE_DELAY=-1;MODE=MySQL;NON_KEYWORDS=USER
+spring.h2.console.path=/h2
+spring.h2.console.settings.trace=false
+spring.h2.console.settings.web-allow-others=false
+#   H2 Connection
+spring.datasource.url=jdbc:h2:mem:rbc
+server.port=8080
 spring.datasource.username=sa
 spring.datasource.password=sa
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
 spring.datasource.driverClassName=org.h2.Driver
-spring.jpa.generate-ddl=true
-spring.jpa.hibernate.ddl-auto=update
-spring.session.jdbc.initialize-schema=always
-spring.jpa.properties.hibernate.format_sql=true
-spring.jpa.defer-datasource-initialization=true
-spring.sql.init.continue-on-error=true
-spring.jpa.properties.hibernate.use_sql_comments=true
-spring.sql.init.mode=always
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
